Fixes slider width on mobile. Makes slider width different on landscape vs portrait devices.

--- a/index.css
+++ b/index.css
@@ -5,7 +5,3 @@ hr {
 .version {
     font-size: small;
 }
-
-.slider {
-    width: 25%
-}
